push write up to github

--- a/info.html
+++ b/info.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>UFO Info</title>
+	 <link rel="stylesheet" type="text/css" href="style.css">
+	 <link href="https://corgis-edu.github.io/corgis/json/ufo_sightings/">
+   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+   <script src="script.js"></script>
+</head>
+<body>
+  <h1>About UFO's</h1>
+  <p>The data used in this web app is from the CORGIS Dataset Project and can be found here! The data contains information about recorded UFO sightings and their location, time frame, and shape. Because the data doesn't offer statistics on which state has the highest number of sightings, that information will not be presented on this website. The most common UFO shapes reported are orb, triangle,other, fireball, disc, egg, cigar, changing, rectangle and diamond.
+</p>
+	<img id="img1" src="school-photo.jpg" alt="picture of SBHS">
+</body>
+</html>
